establishing a minimum height to prevent content jumping

--- a/voniel-brown-portfolio/src/App.css
+++ b/voniel-brown-portfolio/src/App.css
@@ -111,6 +111,6 @@ button {
 }
 
 .proj-scroll {
-  /* position: fixed; */
-  margin-bottom: 90px;
+  position: absolute;
+  margin-bottom: -60vh;
 }
