--- a/voniel-brown-portfolio/src/Pages/About/aboutPage.css
+++ b/voniel-brown-portfolio/src/Pages/About/aboutPage.css
@@ -1,6 +1,7 @@
 .aboutPage {
   height: 100vh;
   width: 100vw;
+  min-height: 780px;
   /* border: 1px solid black; */
   display: flex;
   flex-direction: column;
