--- a/voniel-brown-portfolio/src/Pages/Contact/contact.css
+++ b/voniel-brown-portfolio/src/Pages/Contact/contact.css
@@ -1,6 +1,6 @@
 .contactPage {
   gap: 200px;
-  height: 100vh;
+  min-height: 780px;
   width: 100vw;
   display: flex;
   align-items: center;
